...
        imageAccuracyUpper80.image = isNight ? UIImage(named: "accuracyUpper80Black") : UIImage(named: "accuracyUpper80White")
        tabBarController?.tabBar.barStyle = isNight ? .black : .default
        navigationController?.navigationBar.barStyle = isNight ? .black : .default
        view.backgroundColor=isNight ? UIColor(red: 0, green: 0, blue: 0, alpha: 1) : UIColor(red: 1, green: 1, blue: 1, alpha: 1)
        let toolBar=UIToolbar()
        toolBar.sizeToFit()
        let nextButton=UIBarButtonItem(title: "Next".localized, style: .plain, target: self, action: #selector(self.nextClicked))
        let flexButton = UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: self, action: nil)
        let doneButton=UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(self.doneClicked))
        toolBar.setItems([nextButton, flexButton, doneButton], animated: false)
        difficulty.inputAccessoryView = toolBar
        accuracy.inputAccessoryView = toolBar
        labelDifficulty.textColor=isNight ? UIColor(red: 1, green: 1, blue: 1, alpha: 1) : UIColor(red: 55/255.0, green: 55/255.0, blue: 55/255.0, alpha: 1)
...
