...
                                <rect key="frame" x="16" y="30" width="40" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="0H5-Cx-cZf"/>
                                    <constraint firstAttribute="height" constant="40" id="dBi-AM-zvM"/>
                                </constraints>
                                <color key="tintColor" red="0.90980392160000001" green="0.63529411759999999" blue="0.20784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" image="backButton"/>
                                <connections>
                                    <action selector="backButtonDidTap:" destination="jIS-jF-tzf" eventType="touchUpInside" id="NJ2-ID-4P0"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="respectuColor" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zCx-DN-hau">
                                <rect key="frame" x="157.5" y="20" width="60" height="60"/>
...
